--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@ https://github.com/timp21337/unifier/issues
     <plugin>
      <groupId>org.codehaus.mojo</groupId>
      <artifactId>cobertura-maven-plugin</artifactId>
-     <!--version>2.0</version-->
+     <version>2.4</version>
      <configuration>
        <instrumentation>
         <ignores>
@@ -102,6 +102,7 @@ https://github.com/timp21337/unifier/issues
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.4</version>
       </plugin>
     </plugins>
   </reporting>
